// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders a Default button 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_button_2a1efe"
    data-kind="primary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    Click me!
  </button>
</div>
`;

exports[`Button > renders a Disabled button 1`] = `
<div>
  <button
    aria-disabled="true"
    class="_button_2a1efe"
    data-kind="primary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    Click me!
  </button>
</div>
`;

exports[`Button > renders a Link button 1`] = `
<div>
  <a
    aria-disabled="false"
    class="_button_2a1efe"
    data-kind="primary"
    data-size="lg"
    href="https://example.org"
    role="link"
    tabindex="0"
  >
    Click me!
  </a>
</div>
`;

exports[`Button > renders a LinkDisabled button 1`] = `
<div>
  <a
    aria-disabled="true"
    class="_button_2a1efe"
    data-kind="primary"
    data-size="lg"
    href="https://example.org"
    role="link"
    tabindex="0"
  >
    Click me!
  </a>
</div>
`;

exports[`Button > renders a Primary Destructive button 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_button_2a1efe _destructive_2a1efe"
    data-kind="primary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    Click me!
  </button>
</div>
`;

exports[`Button > renders a Primary button 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_button_2a1efe"
    data-kind="primary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    Click me!
  </button>
</div>
`;

exports[`Button > renders a Secondary Destructive button 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_button_2a1efe _destructive_2a1efe"
    data-kind="secondary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    Click me!
  </button>
</div>
`;

exports[`Button > renders a Secondary button 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_button_2a1efe"
    data-kind="secondary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    Click me!
  </button>
</div>
`;

exports[`Button > renders a Small button 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_button_2a1efe"
    data-kind="primary"
    data-size="sm"
    role="button"
    tabindex="0"
  >
    Click me!
  </button>
</div>
`;

exports[`Button > renders a SmallWithIcon button 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_button_2a1efe _has-icon_2a1efe"
    data-kind="primary"
    data-size="sm"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="_icon_2a1efe"
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 16q1.875 0 3.188-1.312Q16.5 13.375 16.5 11.5t-1.312-3.187T12 7 8.813 8.313 7.5 11.5t1.313 3.188T12 16m0-1.8q-1.125 0-1.912-.787A2.6 2.6 0 0 1 9.3 11.5q0-1.125.787-1.912A2.6 2.6 0 0 1 12 8.8q1.125 0 1.912.787.788.788.788 1.913t-.787 1.912A2.6 2.6 0 0 1 12 14.2m0 4.8q-3.475 0-6.35-1.837Q2.775 15.324 1.3 12.2a.8.8 0 0 1-.1-.312 3 3 0 0 1 0-.775.8.8 0 0 1 .1-.313q1.475-3.125 4.35-4.962Q8.525 4 12 4t6.35 1.838T22.7 10.8a.8.8 0 0 1 .1.313 3 3 0 0 1 0 .774.8.8 0 0 1-.1.313q-1.475 3.125-4.35 4.963Q15.475 19 12 19m0-2a9.54 9.54 0 0 0 5.188-1.488A9.77 9.77 0 0 0 20.8 11.5a9.77 9.77 0 0 0-3.613-4.012A9.54 9.54 0 0 0 12 6a9.55 9.55 0 0 0-5.187 1.487A9.77 9.77 0 0 0 3.2 11.5a9.77 9.77 0 0 0 3.613 4.012A9.54 9.54 0 0 0 12 17"
      />
    </svg>
    Click me!
  </button>
</div>
`;

exports[`Button > renders a Tertiary Destructive button 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_button_2a1efe _destructive_2a1efe"
    data-kind="tertiary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    Click me!
  </button>
</div>
`;

exports[`Button > renders a Tertiary button 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_button_2a1efe"
    data-kind="tertiary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    Click me!
  </button>
</div>
`;

exports[`Button > renders a WithIcon button 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_button_2a1efe _has-icon_2a1efe"
    data-kind="primary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="_icon_2a1efe"
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 16q1.875 0 3.188-1.312Q16.5 13.375 16.5 11.5t-1.312-3.187T12 7 8.813 8.313 7.5 11.5t1.313 3.188T12 16m0-1.8q-1.125 0-1.912-.787A2.6 2.6 0 0 1 9.3 11.5q0-1.125.787-1.912A2.6 2.6 0 0 1 12 8.8q1.125 0 1.912.787.788.788.788 1.913t-.787 1.912A2.6 2.6 0 0 1 12 14.2m0 4.8q-3.475 0-6.35-1.837Q2.775 15.324 1.3 12.2a.8.8 0 0 1-.1-.312 3 3 0 0 1 0-.775.8.8 0 0 1 .1-.313q1.475-3.125 4.35-4.962Q8.525 4 12 4t6.35 1.838T22.7 10.8a.8.8 0 0 1 .1.313 3 3 0 0 1 0 .774.8.8 0 0 1-.1.313q-1.475 3.125-4.35 4.963Q15.475 19 12 19m0-2a9.54 9.54 0 0 0 5.188-1.488A9.77 9.77 0 0 0 20.8 11.5a9.77 9.77 0 0 0-3.613-4.012A9.54 9.54 0 0 0 12 6a9.55 9.55 0 0 0-5.187 1.487A9.77 9.77 0 0 0 3.2 11.5a9.77 9.77 0 0 0 3.613 4.012A9.54 9.54 0 0 0 12 17"
      />
    </svg>
    Click me!
  </button>
</div>
`;
